Enable Dynamic Fsync

--- a/arch/arm/configs/t0vzw_04_defconfig
+++ b/arch/arm/configs/t0vzw_04_defconfig
@@ -1276,6 +1276,7 @@ CONFIG_MUIC_MAX77693_SUPPORT_SMART_DOCK=y
 # CONFIG_SEC_MODEM is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # SCSI device support
